diseño de home, utilizacion de carrusel para productos mas vendidos

--- a/home/home.css
+++ b/home/home.css
@@ -2,3 +2,9 @@
     left: auto !important;
     right: 0 !important;
 }
+
+
+#vendidos.container,
+#vendidos.container-sm {
+    max-width: none; 
+}
