Secciond e promociones y inicio de tu ultima compra

--- a/home/home.css
+++ b/home/home.css
@@ -3,7 +3,8 @@
     right: 0 !important;
 }
 
-
+#promociones.container,
+#promociones.container-sm,
 #vendidos.container,
 #vendidos.container-sm {
     max-width: none; 
