--- a/home/home.css
+++ b/home/home.css
@@ -3,6 +3,11 @@
     right: 0 !important;
 }
 
+
+#lo_ultimo.container,
+#lo_ultimo.container-sm,
+#compras.container,
+#compras.container-sm,
 #promociones.container,
 #promociones.container-sm,
 #vendidos.container,
