--- a/home/home.css
+++ b/home/home.css
@@ -8,6 +8,8 @@
 #lo_ultimo.container-sm,
 #compras.container,
 #compras.container-sm,
+#nuevos.container,
+#nuevos.container-sm,
 #promociones.container,
 #promociones.container-sm,
 #vendidos.container,
